# flow.py

./: .gitignore  .readthedocs.yaml  README.md  README.rst  SettingsTemplate.yaml  example.py  install_packages.bat  main.py  plugin.json  pyproject.toml  raw_example.py  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  run_formatters.bat  setup.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: black.yaml  lint.yaml  tests.yml
docs/: api.rst  cli.rst  conf.py  ctx_menu_handlers.rst  errors.rst  events.rst  faq.rst  flow_api.rst  index.rst  intro.rst  jsonrpc.rst  plugin.rst  quickstart.rst  requirements.txt  search_handlers.rst  test.rst  testing.rst  whats_new.rst
examples/: action.py  context_menu.py  custom_result.py  return_list.py  search_handlers.py  subclassed.py  yield_options.py
examples/basic_query/: return_list.py  yield_options.py
flogin/: __init__.py  __main__.py  _types.py  conditions.py  default_events.py  enums.py  errors.py  plugin.py  query.py  search_handler.py  settings.py  utils.py
flogin/flow/: __init__.py  base.py  enums.py  plugin_metadata.py  settings.py
flogin/flow_api/: base.py  client.py  method.py
flogin/jsonrpc/: __init__.py  client.py  glyph.py  results.py
flogin/settings_template/: __init__.py  constructor.py  fields.py
flogin/testing/: plugin_tester.py
flowpy/: __init__.py  _types.py  conditions.py  context_menu_handler.py  default_events.py  errors.py  plugin.py  query.py  search_handler.py  settings.py  utils.py
flowpy/flow_api/: __init__.py  base.py  client.py  fuzzy_search.py  plugin_metadata.py
flowpy/jsonrpc/: __init__.py  base_object.py  client.py  errors.py  objects.py  option.py  responses.py  result.py  results.py  utils.py
tests/: test_conditions.py  test_search_handlers.py  test_settings.py
