[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flow.py"
description = "A Python wrapper for Flow Launcher's v2 python api"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [{ name = "cibere" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Issue tracker" = "https://github.com/cibere/flow.py/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = [
    "flowpy",
    "flowpy.flow_api",
    "flowpy.jsonrpc",
]