[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flogin"
description = "A Python wrapper for Flow Launcher's v2 python api"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
authors = [{ name = "cibere" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[project.urls]
Documentation = "https://flogin.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/cibere/flogin/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies.docs = { file = "requirements-docs.txt" }
optional-dependencies.dev = { file = "requirements-dev.txt" }

[tool.setuptools]
packages = [
    "flogin",
    "flogin.flow_api",
    "flogin.jsonrpc",
]